# neuroRAG

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-extras.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/corpus/: neuro_corpus.jsonl
data/eval/: queries.jsonl
data/ontology/: neuro_ontology.yaml
docs/: ARCHITECTURE.md  CONFORMAL.md
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  GraphView.jsx  api.js  styles.css
paper/: conformal_results.md  paper.md  paper.tex  results.md
scripts/: faiss_bench.py  prepare_data.py  train_lora.py
src/neurographrag/: __init__.py  api.py  cli.py  config.py  conformal.py  conformal_report.py  embeddings.py  evaluation.py  generation.py  ingestion.py  kg.py  ontology.py  pipeline.py  report.py  retrieval.py  utils.py
tests/: conftest.py  test_conformal.py  test_metrics.py  test_ontology_and_text.py  test_pipeline_and_retrieval.py
web/: index.html
